# src/controllers/groupContact.controller.js
@@ -41,6 +41,7 @@ const methods = {
             #swagger.description = 'Insert group lists'
             #swagger.parameters['authorization'] = {
                 in: 'header',
+                required: 'true',
                 type: 'string'
             }
              #swagger.parameters['data'] = {
@@ -67,6 +68,29 @@ const methods = {
 
   async onUpdate(req, res) {
     try {
+      /* 
+            #swagger.tags = ['Group']
+            #swagger.description = 'Update group lists'
+            #swagger.parameters['authorization'] = {
+                in: 'header',
+                required: 'true',
+                type: 'string'
+            }
+             #swagger.parameters['data'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $nameGroupContact: 'test001',
+                }
+            }
+            #swagger.responses[200] = {
+                schema: { $ref: "#/definitions/GroupPostRes" }
+            }
+            #swagger.responses[500] = {
+                schema: { $ref: "#/definitions/ErrorRes" }
+            }
+        */
+
       const result = await Contact.updateGroup(req.params.idGroupContact, req.body)
       res.success(result, 200)
     } catch (error) {
